<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/setting_background"
    android:id="@+id/main"
     >

  <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="44dp"
      android:id="@+id/setting_header"
      android:background="@color/white"
      >
      <ImageView 
          android:layout_width="26dp"
          android:layout_height="26dp"
          android:id="@+id/change_info_back"
          android:layout_centerVertical="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="16dp"
          android:contentDescription="@string/setting_back"
          android:src="@drawable/back_black_topbar"
          android:clickable="true"
          />
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/base_info"
          android:textSize="17sp"
          android:textColor="@color/tab_text_color"
          android:layout_centerInParent="true"
          />
     
  </RelativeLayout>
 <View 
    android:layout_width="fill_parent"
    android:layout_height="0.5dp"
    android:background="@color/setting_header_divider"
    android:alpha="0.5"
    />
	<View 
	    android:layout_marginTop="15dp"
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:background="@color/setting_divider"
	    />
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="64dp"
	    android:id="@+id/set_nickname"
	    android:background="@color/white"
	    android:clickable="true"
	    >
	    <TextView 
	        android:layout_marginLeft="15dp"
	        android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:text="@string/nickname"
	       	android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:textSize="17sp"
	        android:textColor="@color/sl_artical_detail"
	        android:id="@+id/nick"
	        />
	    <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="17sp"
          android:textColor="@color/content_color"
          android:layout_centerVertical="true"
          android:layout_marginLeft="51dp"
          android:id="@+id/nickname"
          android:layout_toRightOf="@+id/nick"
          />
	    <ImageView 
	        android:contentDescription="@string/arrow"
	        android:layout_width="8dp"
	        android:layout_height="13dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="15dp"
	        android:src="@drawable/click_see"
	        />
	</RelativeLayout>
	<View 
	  
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:background="@color/setting_divider"
	    />
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="64dp"
	    android:id="@+id/set_sex"
	    android:background="@color/white"
	     android:clickable="true"
	    >
	    <TextView 
	        android:layout_marginLeft="15dp"
	        android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:text="@string/sex"
	       	android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:textSize="17sp"
	        android:textColor="@color/sl_artical_detail"
	        android:id="@+id/seex"
	        />
	    <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="17sp"
          android:textColor="@color/content_color"
          android:layout_centerVertical="true"
          android:layout_marginLeft="51dp"
          android:id="@+id/sex"
          android:layout_toRightOf="@+id/seex"
          android:text="男"
          />
	    <ImageView 
	        android:contentDescription="@string/arrow"
	        android:layout_width="8dp"
	        android:layout_height="13dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="15dp"
	        android:src="@drawable/click_see"
	        />
	</RelativeLayout>
	<View 
	    
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:background="@color/setting_divider"
	    />
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="64dp"
	    android:id="@+id/set_signature"
	 	android:background="@color/white"
	 	android:clickable="true"
	    >
	    <TextView 
	        android:layout_marginLeft="15dp"
	        android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	       	android:text="@string/signature"
	       	android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:textSize="17sp"
	        android:textColor="@color/sl_artical_detail"
	        android:id="@+id/signa"
	        />
	    <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="17sp"
          android:textColor="@color/content_color"
          android:layout_centerVertical="true"
          android:layout_marginLeft="17dp"
          android:text="孤单是一个人的狂欢"
          android:layout_toRightOf="@+id/signa"
          android:id="@+id/signature"
          />
	    <ImageView 
	        android:contentDescription="@string/arrow"
	        android:layout_width="8dp"
	        android:layout_height="13dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="15dp"
	        android:src="@drawable/click_see"
	        />
	</RelativeLayout>
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="0.5dp"
	    android:background="@color/setting_divider"
	    />
	<Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/new_blog_background"
        android:text="@string/exit"
        android:textColor="@color/pink"
        android:layout_gravity="center"
        android:textSize="17sp" />
</LinearLayout>
