<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.example.zhengjun.helloandroid"
    android:id="@+id/mine_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:alpha="0.8"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/canlendar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/calendar_button"
            android:src="@drawable/topbar_back_black"
            android:textSize="12sp" >
        </ImageView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/mine_title_color"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:background="@null"
            android:contentDescription="@string/setting_button"
            android:src="@drawable/setting_toolbar" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/bottom_background" />

    <com.example.zhengjun.helloandroid.view.MyScrollView
        android:id="@+id/mine_scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/mine_top"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="240dp"
                    android:background="@drawable/mine_bg"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <com.example.zhengjun.helloandroid.view.CircleImageView
                            android:id="@+id/user_photo_mine"
                            android:layout_width="72dp"
                            android:layout_height="72dp"
                            android:clickable="true"
                            android:onClick="change_photo"
                            app:border_color="#d8d8d8"
                            app:border_width="2dp" />

                        <TextView
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14.5dp"
                            android:textColor="@color/white"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/user_sign"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:alpha="0.8"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="fill_parent"
                        android:layout_height="59.5dp"
                        android:layout_marginTop="15.5dp" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:alpha="0.1"
                            android:background="@color/black" >
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="59.5dp"
                            android:layout_gravity="bottom"
                            android:gravity="center"
                            android:orientation="horizontal" >

                            <LinearLayout
                                android:id="@+id/concer"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:gravity="center"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/concern_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/white"
                                    android:textSize="17sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/concern"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="0.5dp"
                                android:layout_height="30dp"
                                android:alpha="0.5"
                                android:background="@color/black" />

                            <LinearLayout
                                android:id="@+id/fans"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/fans_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/white"
                                    android:textSize="17sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/funs"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>

                            <View
                                android:layout_width="0.5dp"
                                android:layout_height="30dp"
                                android:alpha="0.5"
                                android:background="@color/black" />

                            <LinearLayout
                                android:id="@+id/album"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:gravity="center"
                                android:orientation="vertical" >

                                <TextView
                                    android:id="@+id/album_number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/white"
                                    android:textSize="17sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/album"
                                    android:textColor="@color/white"
                                    android:textSize="14sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </FrameLayout>
                </LinearLayout>

                <com.shizhefei.view.indicator.FixedIndicatorView
                    android:id="@+id/fragment_mine_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />
            </LinearLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/fragment_mine_viewPager"
                android:layout_width="match_parent"
                android:layout_height="500dp" />
        </LinearLayout>
    </com.example.zhengjun.helloandroid.view.MyScrollView>

</LinearLayout>